# Shopping-Cart

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py  shopping_cart.db
app/DataBase/: base.py  table.py
app/routers/: auth.py  cart.py  order.py  product.py  user.py
app/schema/: auth.py  cart.py  order.py  product.py  user.py
