[tool.poetry]
name = "shopping-cart"
version = "0.1.0"
description = "backend shooping cart practice"
authors = ["eric li"]
readme = "README.md"
packages = [{include = "shopping_cart"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.109.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
