[tool.poetry]
name = "shopping-cart"
version = "0.1.0"
description = "backend shooping cart practice"
authors = ["eric li"]
readme = "README.md"
packages = [{include = "shopping_cart"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.109.0"}
sqlalchemy = "^2.0.25"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
